# temp-control

./: .env.example  .gitignore  README.md  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: celery.dockerfile  fastapi.dockerfile  frontend.dockerfile
fastapi/src/: conftest.py  main.py
fastapi/src/alembic/: env.py
fastapi/src/alembic/versions/: 0353bbac3166_user_model.py
fastapi/src/constants/: __init__.py  general.py
fastapi/src/dao/: __init__.py  general.py  users.py
fastapi/src/db/: __init__.py  database.py
fastapi/src/models/: base_class.py  users.py
fastapi/src/routes/: __init__.py  deps.py  public.py  users.py  utilities.py
fastapi/src/schemas/: users.py
fastapi/src/settings/: __init__.py  config.py  logging.py
fastapi/src/tests/models/: test_users.py
fastapi/src/tests/routes/: test_users.py  test_utilities.py
fastapi/src/utilities/: __init__.py  base64.py  jwt_token.py
fastapi/src/worker/: scheduler-start.sh  tasks.py  worker-start.sh  worker.py
nginx/development/conf/: api.conf  bullpen.conf
nginx/staging/conf/: api.conf  app.conf
